# sticky-one

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
contrib/: PKGBUILD  syo.service
src/: clipboard.rs  config.rs  daemon.rs  entry.rs  error.rs  lib.rs  main.rs  storage.rs
src/gui/: mod.rs  popup.rs
src/hotkey/: listener.rs  mod.rs
