[package]
name = "sticky_one"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "syo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
sha2 = "0.10"
thiserror = "1"
tabled = "0.17"
colored = "2"
daemonize = "0.5"

# GUI + Hotkey
evdev = { version = "0.13", features = ["tokio"] }
iced = { version = "0.14", features = ["tokio"] }
iced_layershell = "0.14"
toml = "0.8"
