[package]
name = "sticky_one"
version = "0.1.0"
edition = "2021"
description = "Lightweight clipboard manager for Linux"
license = "MIT"
repository = "https://github.com/olajoao/sticky-one"
homepage = "https://github.com/olajoao/sticky-one"
readme = "README.md"
keywords = ["clipboard", "manager", "wayland", "x11", "linux"]
categories = ["command-line-utilities"]

[[bin]]
name = "syo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
sha2 = "0.10"
thiserror = "1"
tabled = "0.17"
colored = "2"
daemonize = "0.5"

# GUI + Hotkey
evdev = { version = "0.13", features = ["tokio"] }
iced = { version = "0.14", features = ["tokio"] }
iced_layershell = "0.14"
toml = "0.8"
log = "0.4"
simplelog = "0.12"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
